其它栏目单页

--- a/product.html
+++ b/product.html
@@ -64,7 +64,7 @@
     <!-- 内容部分 -->
     <div class="content">
         <div class="baseWidth clearfix">
-            <div class="content_left">
+            <div class="fl content_left">
                 <div class="l_top">
                     <div class="intro">专业介绍</div>
                     <div class="l_top_list">
@@ -102,14 +102,104 @@
                     </div>
                 </div>
             </div>
-            <div class="content_right">
+            <div class="fr content_right">
                 <div class="mbx">
                     <div class="fl mbx_l">专业介绍</div>
-                    <div class="fl mbx_r">
-                        <span>您当前的位置</span>
+                    <div class="fr mbx_r">
+                        <span>您当前的位置:</span>
                         <a href="javascript:;">首页</a>
-                        <span>&gt;</span>
+                        <span class="fuhao">&gt;</span>
                         <a href="javascript:;">专业介绍</a>
+                    </div>
+                </div>
+                <div class="r_list">
+                    <div class="list_wrap">
+                        <ul class="clearfix">
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+
+                            </li>
+                            <li>
+                                <a href="javascript:;">
+                                    <img src="imgs/p_list.png" alt="">
+                                    <p>
+                                        重庆航空学校
+                                    </p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="pagess">
+                        <ul>
+                            <li class="thisclass">1</li>
+                            <li><a href="list_2_2.html">2</a></li>
+                            <li><a href="list_2_3.html">3</a></li>
+                            <li><a href="list_2_2.html">下一页</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
