--- a/index.html
+++ b/index.html
@@ -51,10 +51,26 @@
             <ul class="clearfix nav_ul">
                 <li class="isActive"><a href="javascript:;">网站首页</a></li>
                 <li><a href="javascript:;">公司简介</a></li>
-                <li><a href="javascript:;">专业介绍</a></li>
+                <li>
+                    <a href="javascript:;">专业介绍</a>
+                    <div class="son_nav">
+                        <a href="javascript:;">空中乘务</a>
+                        <a href="javascript:;">航空服务</a>
+                        <a href="javascript:;">民航安检</a>
+                        <a href="javascript:;">铁铁乘务</a>
+                    </div>
+                </li>
                 <li><a href="javascript:;">就业保障</a></li>
                 <li><a href="javascript:;">学员风采</a></li>
-                <li><a href="javascript:;">民航动态</a></li>
+                <li>
+                    <a href="javascript:;">民航动态</a>
+                    <div class="son_nav">
+                        <a href="javascript:;">民航资讯</a>
+                        <a href="javascript:;">招生动态</a>
+                        <a href="javascript:;">行业资讯</a>
+                        <a href="javascript:;">招生问答</a>
+                    </div>
+                </li>
                 <li><a href="javascript:;">在线留言</a></li>
                 <li><a href="javascript:;">联系我们</a></li>
             </ul>
